# LLM-AlertBridge

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.wazuh-certs.yml  docker-compose.yml  intro.md  pyproject.toml
backend/app/: config.py  main.py  templates.py
backend/app/api/: alerts.py  analysis.py  health.py  router.py  views.py
backend/app/db/: session.py
backend/app/models/: __init__.py  alert.py  analysis.py  enrichment.py
backend/app/prompts/: analysis.txt  system.txt
backend/app/schemas/: alert.py  analysis.py  correlation.py  enrichment.py
backend/app/services/: alert_service.py  analysis_service.py  baseline_service.py  correlation_service.py  enrichment_service.py  (+1 more)
backend/tests/: conftest.py  test_assessment.py  test_correlation.py  test_enrichment.py  test_integration.py  test_llm_parser.py  test_normalizer.py
context/: project_card.txt  project_structure.txt
deploy/wazuh/: generate-indexer-certs.yml
diploma-instructions/: 01-run-migrations.md  02-osquery-setup.md  03-run-experiments.md  04-lm-studio-models.md  05-thesis-chapters.md
docs/: algorithms.md  architecture.md  deployment-diploma.md  deployment.md  network.md  user-guide.md  wazuh.md
experiments/: README.md  analyze_results.py  corpus.json  model_comparison_benchmarks.md  run_evaluation.py
frontend/templates/: 404.html  alert_detail.html  alerts.html  base.html
oneshot-docs/: diploma-first-try.md  implementation-plan.md  task-separation-prepreprod.md
project_docs/: project_report.md
reports/: diploma-v1.md
scripts/: seed_alerts.py
(+32 files in other folders)
